--- a/index.html
+++ b/index.html
@@ -24,8 +24,9 @@
 
 
   <h3>This is my first git hub project
-    
+
   </h3>
+  <p>Nusha</p>
 
   <header id="header">
     <nav class="navbar navbar-expand-lg px-4">
